[FEAT]調整樣式設定 / Component Input 邏輯更新

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,2 +1,12 @@
 // Color
 $primary-yellow: #ffd370;
+$primary-black: #333333;
+
+// Media Queries
+$pc-media: 1000px;
+
+@mixin pc-width() {
+  @media all and (min-width: $pc-media) {
+    @content;
+  }
+}
